--- a/src/main/resources/templates/admins/edit.html
+++ b/src/main/resources/templates/admins/edit.html
@@ -5,8 +5,8 @@
   <title>Edit User</title>
 </head>
 <body>
-  <form th:method="patch" th:action="@{/admins/{id}(id=${user.getId()})}" th:object="${user}">
-<!--    <input type="hidden" name="_method" value="PATCH">-->
+
+<form th:method="patch" th:action="@{/admins/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
@@ -15,47 +15,18 @@
     <input type="text" th:field="*{password}" id="password"/>
     <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
     <br/>
-
-<!--      <p>-->
-<!--          <label>Roles:-->
-<!--              <input type="checkbox" name="roles"-->
-<!--                     th:each="role : ${roles}"-->
-<!--                     th:text="${role.name}"-->
-<!--                     th:value="${role.id}"-->
-<!--                     th:field="*{roles}"-->
-<!--              />-->
-<!--          </label>-->
-<!--      </p>-->
-
-      <label> Role:
-      <select name="roles" class="form-select" required multiple size="2">
-          <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
-      </select>
-      </label>
-<!--      <label>Роль:-->
-<!--          <select size="2" multiple name="role" required="required">-->
-<!--              <option selected="selected" value="1">USER</option>-->
-<!--              <option value="2">ADMIN</option>-->
-<!--          </select>-->
-<!--      </label>-->
-
-<!--    <label for="roles">Enter roles: </label>-->
-<!--    <select name="roles" class="form-select" required multiple size="2">-->
-<!--      <option th:each="role : ${roles}" th:value="${role}" th:text="${role}"></option>-->
-<!--    </select>-->
-
-<!--      <div th:each="role : ${roles}">-->
-<!--          <input type="checkbox" th:name="${role}" th:checked="${#lists.contains(role)}">-->
-<!--          <label for="" th:text="${role}"></label>-->
-<!--      </div>-->
-
-<!--    <label for="roles">Enter roles: </label>-->
-<!--    <input type="text" th:field="*{roles}" id="roles"/>-->
-<!--    <div style="color:red" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">Role error</div>-->
-
+    <label> Role:
+        <select name="roles" class="form-select" required multiple size="2">
+            <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
+        </select>
+    </label>
     <br/>
     <br/>
     <input type="submit" value="Update!"/>
-  </form>
+</form>
+<br/>
+<a href="/logout">Log out</a>
+
+
 </body>
 </html>
