--- a/src/main/resources/templates/admins/new.html
+++ b/src/main/resources/templates/admins/new.html
@@ -5,28 +5,27 @@
     <title>New User</title>
 </head>
 <body>
-    <form th:method="post" th:action="@{/admins}" th:object="${user}">
-        <label for="name">Enter name: </label>
-        <input type="text" th:field="*{name}" id="name"/>
-        <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
-        <br/>
-        <label for="password">Enter password: </label>
-        <input type="text" th:field="*{password}" id="password"/>
-        <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
-        <br/>
-        <p>
-            <label>Roles:
-                <input type="checkbox" name="roles"
-                       th:each="role : ${roles}"
-                       th:text="${role.name}"
-                       th:value="${role.id}"
-                       th:field="*{roles}"
-                />
-            </label>
-        </p>
-        <br/>
-        <br/>
-        <input type="submit" value="Create!"/>
-    </form>
+
+<form th:method="post" th:action="@{/admins}" th:object="${user}">
+    <label for="name">Enter name: </label>
+    <input type="text" th:field="*{name}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+    <br/>
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
+    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
+    <br/>
+    <label> Role:
+        <select name="roles" class="form-select" required multiple size="2">
+            <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}"></option>
+        </select>
+    </label>
+    <br/>
+    <br/>
+    <input type="submit" value="Create!"/>
+</form>
+<br/>
+<a href="/logout">Log out</a>
+
 </body>
 </html>
