--- a/src/main/resources/templates/admins/show.html
+++ b/src/main/resources/templates/admins/show.html
@@ -9,11 +9,16 @@
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getName()}">VALUE</p>
 <p th:text="${user.getRolesToString()}">VALUE</p>
-
-<a th:href="@{/admins/{id}/edit(id=${user.getId()})}">Edit</a>
-
+<br/>
+<form th:action="@{/admins/{id}/edit(id=${user.getId()})}">
+    <input type="submit" value="Edit"/>
+</form>
+<br/>
 <form th:method="DELETE" th:action="@{/admins/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
 </form>
+<br/>
+<a href="/logout">Log out</a>
+
 </body>
 </html>
