--- a/src/main/resources/templates/users/userpage.html
+++ b/src/main/resources/templates/users/userpage.html
@@ -7,17 +7,19 @@
 <body>
 
 <table>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Roles</th>
-    </tr>
-    <tr>
-        <td th:utext="${user.getId()}">user</td>
-        <td th:utext="${user.getName()}">user</td>
-        <td th:utext="${user.getRolesToString()}">user</td>
-    </tr>
+<tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Roles</th>
+</tr>
+<tr>
+    <td th:utext="${user.getId()}">user</td>
+    <td th:utext="${user.getName()}">user</td>
+    <td th:utext="${user.getRolesToString()}">user</td>
+</tr>
 </table>
+<br/>
+<a href="/logout">Log out</a>
 
 </body>
 </html>
