--- a/src/main/resources/templates/admins/adminpage.html
+++ b/src/main/resources/templates/admins/adminpage.html
@@ -2,9 +2,276 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+          crossorigin="anonymous">
     <title>Admin Page</title>
 </head>
 <body>
+
+<div class="container-fluid">
+    <div class="row bg-dark align-items-center">
+        <div class="col-11">
+            <span class="nav navbar-text text-white fs-4">
+                <strong><th:block th:text="${user.getName()}"></th:block></strong>
+                &nbsp;<nobr>with roles:</nobr>
+                &nbsp;<th:block th:text="${user.getRolesToString()}"></th:block>
+<!--                &nbsp;<th:block th:each="role : ${logUser.getRoles()}" th:text="${role.getStringRole()} + ' '"></th:block>-->
+            </span>
+        </div>
+        <div class="col-1">
+            <ul class="nav navbar-nav float-end">
+                <li class="nav-item">
+                    <form th:action="@{/logout}" th:method="post">
+                        <input type="submit" value="Logout" class="bg-dark form-control-plaintext text-white-50 h5">
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2 bg-white vh-100 p-0"><br>
+            <ul class="nav flex-column nav-pills fs-5">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admins">Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-10 bg-light vh-100"><br>
+            <h1>
+                Admin panel
+            </h1>
+            <div>
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/admins">Users table</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admins/new">New User</a>
+                    </li>
+                </ul>
+                <table class="table table-striped table-bordered">
+                    <tbody>
+                    <tr>
+                        <th class="h4 px-4">All users</th>
+                    </tr>
+                    <tr>
+                        <td class="bg-white p-4">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+<!--                                    <th>Last name</th>-->
+<!--                                    <th>Age</th>-->
+<!--                                    <th>Email</th>-->
+                                    <th>Role</th>
+                                    <th>Edit</th>
+                                    <th>Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="user : ${users_list}">
+                                    <td scope="row" th:text="${user.getId()}"></td>
+                                    <td th:text="${user.getName()}"></td>
+<!--                                    <td th:text="${user.getLastName()}"></td>-->
+<!--                                    <td th:text="${user.getAge()}"></td>-->
+<!--                                    <td th:text="${user.getEmail()}"></td>-->
+                                    <td>
+                                        <nobr th:text="${user.getRolesToString()}"> </nobr>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-info text-white" data-bs-toggle="modal" data-bs-target="#editModal"
+                                                th:attrappend="data-bs-target=${user.getId()}">
+                                            Edit
+                                        </button>
+                                        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+                                             th:attrappend="id=${user.getId()}">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Edit user</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <form th:method="put" th:action="@{/admins/{id}(id=${user.getId()})}" th:object="${user}">
+                                                        <div class="modal-body container-fluid col-md-6 text-center">
+                                                            <label for="ID-user-for-edit" class="col-form-label"><strong>ID</strong></label>
+                                                            <fieldset disabled>
+                                                                <input type="text" class="form-control" id="ID-user-for-edit" th:value="*{id}" th:name="id">
+                                                            </fieldset>
+                                                            <br/>
+                                                            <label for="firstname-user-for-edit" class="form-label"><strong>First name</strong></label>
+                                                            <input type="text" class="form-control" id="firstname-user-for-edit" th:value="*{name}" th:name="name">
+                                                            <br/>
+<!--                                                            <label for="lastname-user-for-edit" class="form-label"><strong>Last name</strong></label>-->
+<!--                                                            <input type="text" class="form-control" id="lastname-user-for-edit" th:value="*{lastName}" th:name="lastName">-->
+<!--                                                            <br/>-->
+<!--                                                            <label for="age-user-for-edit" class="form-label"><strong>Age</strong></label>-->
+<!--                                                            <input type="number" class="form-control" id="age-user-for-edit" th:value="*{age}" th:name="age">-->
+<!--                                                            <br/>-->
+<!--                                                            <label for="email-user-for-edit" class="form-label"><strong>Email</strong></label>-->
+<!--                                                            <input type="email" class="form-control" id="email-user-for-edit" th:value="*{email}" th:name="email">-->
+<!--                                                            <br/>-->
+                                                            <label for="password-user-for-edit" class="form-label"><strong>Password</strong></label>
+                                                            <input type="text" class="form-control" id="password-user-for-edit" th:value="*{password}" th:name="password">
+                                                            <br/>
+                                                            <label for="role-user-for-edit" class="form-label"><strong>Role</strong></label>
+                                                            <select multiple
+                                                                    class="form-control form-control-sm mb-3"
+                                                                    id="role-user-for-edit"
+                                                                    name="roles"
+                                                                    size="2">
+                                                                <option th:each="role: ${roles}"
+                                                                        th:value="${role.getId()}">
+                                                                    <th:block
+                                                                            th:text="${role.getName().substring(5)}">
+                                                                    </th:block>
+                                                                </option>
+                                                            </select>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                            <button type="submit" class="btn btn-primary">Edit</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                th:attrappend="data-bs-target=${user.id}">
+                                            Delete
+                                        </button>
+                                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true"
+                                             th:attrappend="id=${user.id}">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="deleteModalLabel">Edit user</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <form th:method="delete" th:action="'/admins/' + ${user.id}" th:object="${user}">
+                                                        <fieldset disabled>
+                                                            <div class="modal-body container-fluid col-md-6 text-center">
+                                                                <label for="ID-user-for-delete" class="col-form-label"><strong>ID</strong></label>
+                                                                <input type="text" class="form-control" id="ID-user-for-delete" th:value="*{id}" th:name="id">
+                                                                <br/>
+                                                                <label for="firstname-user-for-delete" class="form-label"><strong>First name</strong></label>
+                                                                <input type="text" class="form-control" id="firstname-user-for-delete" th:value="*{name}" th:name="name">
+                                                                <br/>
+    <!--                                                            <label for="lastname-user-for-delete" class="form-label"><strong>Last name</strong></label>-->
+    <!--                                                            <input type="text" class="form-control" id="lastname-user-for-delete" th:value="*{lastName}" th:name="lastName" readonly>-->
+    <!--                                                            <br/>-->
+    <!--                                                            <label for="age-user-for-delete" class="form-label"><strong>Age</strong></label>-->
+    <!--                                                            <input type="number" class="form-control" id="age-user-for-delete" th:value="*{age}" th:name="age" readonly>-->
+    <!--                                                            <br/>-->
+    <!--                                                            <label for="email-user-for-delete" class="form-label"><strong>Email</strong></label>-->
+    <!--                                                            <input type="email" class="form-control" id="email-user-for-delete" th:value="*{email}" th:name="email" readonly>-->
+    <!--                                                            <br/>-->
+                                                                <label for="password-user-for-delete" class="form-label"><strong>Password</strong></label>
+                                                                <input type="text" class="form-control" id="password-user-for-delete" th:value="*{password}" th:name="password">
+                                                                <br/>
+                                                                <label for="role-user-for-delete" class="form-label"><strong>Role</strong></label>
+                                                                <select multiple
+                                                                        class="form-control form-control-sm mb-3"
+                                                                        id="role-user-for-delete"
+                                                                        name="roles"
+                                                                        size="2">
+                                                                    <option th:each="role: ${roles}"
+                                                                            th:text="${role.getName().substring(5)}">
+                                                                    </option>
+                                                                </select>
+                                                            </div>
+                                                        </fieldset>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--&lt;!&ndash;Шапка&ndash;&gt;-->
+
+
+
+<!--<div class="d-flex justify-content-between bd-highlight mb-2" style="height: 50px; background-color: rgba(255,0,0,0.1);">-->
+<!--    <div class="p-2 bd-highlight">th:utext="${user.getName()}"</div>-->
+<!--    <div class="p-2 bd-highlight">Flex item</div>-->
+<!--</div>-->
+
+
+<!--&lt;!&ndash;Вкладки&ndash;&gt;-->
+<!--<nav class="nav nav-pills" id="pills-tab" role="tablist">-->
+<!--    <a class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Home</a>-->
+<!--    <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</a>-->
+<!--    <a class="nav-link disabled" id="pills-disabled-tab" data-bs-toggle="pill" href="#pills-disabled" role="tab" aria-controls="pills-disabled" tabindex="-1" aria-disabled="true">Disabled</a>-->
+<!--</nav>-->
+<!--<div class="tab-content" id="pills-tabContent">-->
+<!--    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid tempore tempora molestiae pariatur, voluptate fuga corrupti est reiciendis maxime totam dolores, voluptates, dolorem eaque sequi.</div>-->
+<!--    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, natus sed soluta necessitatibus tempore aspernatur? Praesentium, odit explicabo distinctio dolore adipisci officia iure, ut magnam optio aliquam at similique veritatis.</div>-->
+<!--    <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium minima repellat incidunt facilis obcaecati blanditiis corrupti ad officia doloribus ullam sapiente ipsum, nemo a, excepturi voluptatem voluptatibus velit eum dignissimos ut, nam tempora? Reiciendis illo itaque veritatis eligendi fuga, mollitia ratione totam veniam esse in.</div>-->
+<!--</div>-->
+
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--<br/>-->
+<!--------------------------------------------------------------------------------------------->
 
 <table>
 <tr>
@@ -30,6 +297,9 @@
 <a href="/admins/new">Create new person</a>
 <br/>
 <a href="/logout">Log out</a>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
 </html>
