--- a/src/main/resources/templates/admins/adminpage.html
+++ b/src/main/resources/templates/admins/adminpage.html
@@ -151,7 +151,7 @@
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
-                                                                <h5 class="modal-title" id="deleteModalLabel">Edit user</h5>
+                                                                <h5 class="modal-title" id="deleteModalLabel">Delete user</h5>
                                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                             </div>
                                                             <form th:method="delete" th:action="'/admins/' + ${user.id}" th:object="${user}">
