--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <title>Login page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Title</title>
 </head>
-
 <body>
-<div class="m-5">
-  <form name="f" th:action="@{/}" method="post">
-      <div class="d-flex flex-column align-items-center w-25 mx-auto">
-        <legend class="h2 text-dark w-75">Please sign in</legend>
-        <div th:if="${param.error}" class="alert alert-danger">
-          Incorrect email or password.
+<h2>Custom Login</h2>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-4 my-lg-5">
+
+            <form name="f" class="my-3" method="post" th:action="@{/}">
+                <fieldset >
+                    <strong >
+                        <h2>Please Sign in</h2>
+                    </strong>
+                    <div th:if="${param.error}" class="alert alert-danger">
+                        Неправильный логин или пароль
+                    </div>
+                    <div th:if="${param.logout}" class="alert alert-success">
+                        Правильный логин и пароль
+                    </div>
+                    <div class="input-group">
+                        <div>
+                            <label for="email"></label>
+                            <input size="41"  class="block w-full rounded p-2 rounded shadow border focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent" id="email" type="email" name="email"  placeholder="E-Mail address">
+                        </div>
+                        <div>
+                            <input size="41"  class="block w-full rounded p-2 rounded shadow border focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent" id="password" type="password"  name="pass" placeholder="Password">
+                        </div>
+
+                    </div>
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary btn-block my-2">Sign in</button>
+                    </div>
+                </fieldset>
+            </form>
         </div>
-        <div th:if="${param.logout}" class="alert alert-success">
-          You have been logged out.
-        </div>
-        <input class="form-control w-75" type="email" id="email" name="email" placeholder="Email address"/>
-        <input class="form-control w-75 mt-2" type="password" id="pass" name="pass" placeholder="Password"/>
-        <button type="submit"  class="btn btn-primary btn-lg m-2 w-75">Sign in</button>
-      </div>
-  </form>
+    </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
