--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,42 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Login page</title>
 </head>
 <body>
-<h2>Custom Login</h2>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-4 my-lg-5">
 
-            <form name="f" class="my-3" method="post" th:action="@{/}">
-                <fieldset >
-                    <strong >
-                        <h2>Please Sign in</h2>
-                    </strong>
-                    <div th:if="${param.error}" class="alert alert-danger">
-                        Неправильный логин или пароль
-                    </div>
-                    <div th:if="${param.logout}" class="alert alert-success">
-                        Правильный логин и пароль
-                    </div>
-                    <div class="input-group">
-                        <div>
-                            <label for="email"></label>
-                            <input size="41"  class="block w-full rounded p-2 rounded shadow border focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent" id="email" type="email" name="email"  placeholder="E-Mail address">
-                        </div>
-                        <div>
-                            <input size="41"  class="block w-full rounded p-2 rounded shadow border focus:outline-none focus:ring-2 focus:ring-green-600 focus:border-transparent" id="password" type="password"  name="pass" placeholder="Password">
-                        </div>
-
-                    </div>
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary btn-block my-2">Sign in</button>
-                    </div>
-                </fieldset>
-            </form>
+<div class="m-5">
+    <form name="f" action="" method="post">
+        <div class="d-flex flex-column align-items-center w-25 mx-auto">
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <label for="email" class="sr-only">Email</label>
+            <input class="form-control w-75" type="email" id="email" name="email" placeholder="Email address"/>
+            <label for="pass" class="sr-only">Password</label>
+            <input class="form-control w-75 mt-2" type="password" id="pass" name="pass" placeholder="Password"/>
+            <button type="submit"  class="btn btn-primary btn-lg m-2 w-75">Sign in</button>
         </div>
-    </div>
+    </form>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
