--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>User</title>
-    <title>Spring Security Example</title>
 </head>
 <body>
-<!------------  Верх  ------------->
 <div class="navbar navbar-expand-md navbar-dark bg-dark align-items-center justify-content-between">
     <div class="col-11 text-white" id="authorised_user-data">
-        <!--js-->
     </div>
     <div class="btn btn-link mr-0 col-1 ml-auto">
         <a class="badge" style="color: grey" href="/logout">Logout</a>
     </div>
 </div>
 <div class="container-fluid">
-    <div class="row mt-3">
-        <!--left panel-->
-        <div class=" col-12 ml-2 nav" role="tablist" id="vertical_navigation" aria-orientation="vertical">
-            <div class="col-2 nav flex-column nav-pills">
-                <a class="nav-link active" id="vertical_navigation-user" data-toggle="tab"  role="tab"
-                   aria-controls="user-panel" aria-selected="true"
-                   sec:authorize="hasAnyAuthority('ROLE_USER', 'ROLE_ADMIN')">User</a>
-            </div>
-
-            <div class="col-10">
+    <div class="row">
+        <div class="col-md-2 bg-white vh-100 p-0"><br>
+            <ul class="nav flex-column nav-pills fs-5">
+                <li class="nav-item">
+                    <a class="nav-link active">User</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-10 bg-light vh-100"><br>
+            <h1>
+                User information-page
+            </h1>
+            <div class="tab-pane fade show active" id="main">
                 <div class="card">
                     <h5 class="card-header">About user</h5>
-                    <div class="card-body">
+                    <div class="container-fluid card-body">
                         <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">FirstName</th>
-                                <th scope="col">LastName</th>
-                                <th scope="col">Age</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
+                            <tr class="container-fluid" style="background-color: white">
+                                <th>ID</th>
+                                <th>FirstName</th>
+                                <th>LastName</th>
+                                <th>Age</th>
+                                <th>Email</th>
+                                <th>Role</th>
                             </tr>
-                            </thead>
-
                             <tbody id="user_panel-data">
                             </tbody>
                         </table>
@@ -54,7 +50,6 @@
         </div>
     </div>
 </div>
-
 
 <script type="text/javascript" src="user.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
